git commit -- second

--- a/p8105_hw1_zz2780.md
+++ b/p8105_hw1_zz2780.md
@@ -6,4 +6,7 @@ p8105_hw1_zz2780
 data("penguins", package = "palmerpenguins")
 ```
 
-344
+This data includes the species, year, and sex of penguins and island
+they live in. It also includes each penguin’s bill length (mm), bill
+depth (mm), flipper length (mm), and body mass (g). The data has 344
+rows and 8 columns
