--- a/p8105_hw1_zz2780.md
+++ b/p8105_hw1_zz2780.md
@@ -6,7 +6,15 @@ p8105_hw1_zz2780
 data("penguins", package = "palmerpenguins")
 ```
 
-This data includes the species, year, and sex of penguins and island
-they live in. It also includes each penguin’s bill length (mm), bill
-depth (mm), flipper length (mm), and body mass (g). The data has 344
-rows and 8 columns
+This data includes the species, year (2007-2009), and sex of penguins
+and island they live in. It also includes each penguin’s bill length
+(mm), bill depth (mm), flipper length (mm), and body mass (g). The data
+has 344 rows and 8 columns. The mean flipper length is 200.9152047 mm.
+
+Code for mean flipper length
+
+``` r
+mean(penguins$flipper_length_mm, na.rm=TRUE)
+```
+
+    ## [1] 200.9152
