--- a/p8105_hw1_zz2780.md
+++ b/p8105_hw1_zz2780.md
@@ -3,13 +3,35 @@ p8105_hw1_zz2780
 2022-09-15
 
 ``` r
+library(tidyverse)
+```
+
+    ## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
+    ## ✔ ggplot2 3.3.6      ✔ purrr   0.3.4 
+    ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
+    ## ✔ tidyr   1.2.0      ✔ stringr 1.4.1 
+    ## ✔ readr   2.1.2      ✔ forcats 0.5.2 
+    ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
+    ## ✖ dplyr::filter() masks stats::filter()
+    ## ✖ dplyr::lag()    masks stats::lag()
+
+``` r
+library(ggplot2)
+```
+
+Problem 1
+
+``` r
 data("penguins", package = "palmerpenguins")
 ```
 
 This data includes the species, year (2007-2009), and sex of penguins
 and island they live in. It also includes each penguin’s bill length
-(mm), bill depth (mm), flipper length (mm), and body mass (g). The data
-has 344 rows and 8 columns. The mean flipper length is 200.9152047 mm.
+(mm), bill depth (mm), flipper length (mm), and body mass (g).
+
+The data has 344 rows and 8 columns.
+
+The mean flipper length is 200.9152047 mm.
 
 Code for mean flipper length
 
@@ -18,3 +40,109 @@ mean(penguins$flipper_length_mm, na.rm=TRUE)
 ```
 
     ## [1] 200.9152
+
+Scatterplot of flipper length and bill length
+
+``` r
+ggplot(penguins, aes(x=bill_length_mm, y=flipper_length_mm, color=species))+geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_zz2780_files/figure-gfm/unnamed-chunk-4-1.png)<!-- -->
+
+``` r
+ggsave("scatter_plot.pdf", height=4, width=6)
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+Problem 2
+
+``` r
+df1 = tibble(
+  a=rnorm(10),
+  b=a>0,
+  c = c("AA","BB","CC","DD","EE","FF","GG","HH","II","JJ"),
+  d= factor(c("MID", "HIGH", "LOW", "LOW", "HIGH", "MID", "MID", "HIGH", "LOW", "MID"))
+)
+```
+
+Mean of each variable
+
+``` r
+#Mean of numeric variable
+mean(df1$a)
+```
+
+    ## [1] -0.1799024
+
+``` r
+#Mean of logical variable
+mean(df1$b)
+```
+
+    ## [1] 0.5
+
+``` r
+#Mean of character variable
+mean(df1$c)
+```
+
+    ## Warning in mean.default(df1$c): argument is not numeric or logical: returning NA
+
+    ## [1] NA
+
+``` r
+#Mean of factor variable
+mean(df1$d)
+```
+
+    ## Warning in mean.default(df1$d): argument is not numeric or logical: returning NA
+
+    ## [1] NA
+
+It works when I tried to take the mean of a numeric variable and the
+mean of a logical variable.
+
+It returns NA value when I tried to take the mean of a character
+variable and a factor variable.
+
+Mean of logical, character, and factor variables
+
+``` r
+#Mean of logical variable
+as.numeric(df1$b)
+```
+
+    ##  [1] 0 0 0 1 0 1 1 1 1 0
+
+``` r
+#Mean of character variable
+as.numeric(df1$c)
+```
+
+    ## Warning: NAs introduced by coercion
+
+    ##  [1] NA NA NA NA NA NA NA NA NA NA
+
+``` r
+#Mean of factor variable
+as.numeric(df1$d)
+```
+
+    ##  [1] 3 1 2 2 1 3 3 1 2 3
+
+The logical variable changes to values of 1 and 0, with True being 1 and
+False being 0. This explains why the logical variable has a numeric mean
+whey I tried to take one.
+
+The character variable becomes a string of NA value, with the error
+“NA’s introduced by coercion”. This explains that why the character
+variable does not have a mean when I tried to take one.
+
+The factor variable changes to value of 1, 2, and 3.Before applying
+as.numeric function, I cannot take the mean of the factor variable.
+However, since it is a three-level factor variables, it can be
+interpreted as reasonable numeric value and thus can be calculated for
+mean.
