commit--final version 2

--- a/p8105_hw1_zz2780.md
+++ b/p8105_hw1_zz2780.md
@@ -75,14 +75,14 @@ Mean of each variable
 mean(df1$a)
 ```
 
-    ## [1] -0.1799024
+    ## [1] -0.3819416
 
 ``` r
 #Mean of logical variable
 mean(df1$b)
 ```
 
-    ## [1] 0.5
+    ## [1] 0.4
 
 ``` r
 #Mean of character variable
@@ -108,17 +108,17 @@ mean of a logical variable.
 It returns NA value when I tried to take the mean of a character
 variable and a factor variable.
 
-Mean of logical, character, and factor variables
+Change to numeric variable
 
 ``` r
-#Mean of logical variable
+#logical variable
 as.numeric(df1$b)
 ```
 
-    ##  [1] 0 0 0 1 0 1 1 1 1 0
+    ##  [1] 0 1 0 0 0 1 0 1 0 1
 
 ``` r
-#Mean of character variable
+#character variable
 as.numeric(df1$c)
 ```
 
@@ -127,22 +127,22 @@ as.numeric(df1$c)
     ##  [1] NA NA NA NA NA NA NA NA NA NA
 
 ``` r
-#Mean of factor variable
+#factor variable
 as.numeric(df1$d)
 ```
 
     ##  [1] 3 1 2 2 1 3 3 1 2 3
 
-The logical variable changes to values of 1 and 0, with True being 1 and
-False being 0. This explains why the logical variable has a numeric mean
-whey I tried to take one.
+The logical variable changes to string with values of 1 and 0, with True
+being 1 and False being 0. This explains why the logical variable has a
+numeric mean whey I tried to take one.
 
 The character variable becomes a string of NA value, with the error
 “NA’s introduced by coercion”. This explains that why the character
 variable does not have a mean when I tried to take one.
 
-The factor variable changes to value of 1, 2, and 3.Before applying
-as.numeric function, I cannot take the mean of the factor variable.
-However, since it is a three-level factor variables, it can be
+The factor variable changes to string with values of 1, 2, and 3.Before
+applying as.numeric function, I cannot take the mean of the factor
+variable. However, since it is a three-level factor variables, it can be
 interpreted as reasonable numeric value and thus can be calculated for
 mean.
