--- a/p8105_hw1_zz2780.Rmd
+++ b/p8105_hw1_zz2780.Rmd
@@ -58,20 +58,20 @@ It works when I tried to take the mean of a numeric variable and the mean of a l
 
 It returns NA value when I tried to take the mean of a character variable and a factor variable.
 
-Mean of logical, character, and factor variables
+Change to numeric variable
 ```{r}
-#Mean of logical variable
+#logical variable
 as.numeric(df1$b)
-#Mean of character variable
+#character variable
 as.numeric(df1$c)
-#Mean of factor variable
+#factor variable
 as.numeric(df1$d)
 ```
 
-The logical variable changes to values of 1 and 0, with True being 1 and False being 0. This explains why the logical variable has a numeric mean whey I tried to take one.
+The logical variable changes to string with values of 1 and 0, with True being 1 and False being 0. This explains why the logical variable has a numeric mean whey I tried to take one.
 
 The character variable becomes a string of NA value, with the error "NA's introduced by coercion". This explains that why the character variable does not have a mean when I tried to take one.
 
-The factor variable changes to value of 1, 2, and 3.Before applying as.numeric function, I cannot take the mean of the factor variable. However, since it is a three-level factor variables, it can be interpreted as reasonable numeric value and thus can be calculated for mean.
+The factor variable changes to string with values of 1, 2, and 3.Before applying as.numeric function, I cannot take the mean of the factor variable. However, since it is a three-level factor variables, it can be interpreted as reasonable numeric value and thus can be calculated for mean.
 
 
